fix: Remove Json dependency from projects